Adds production link

--- a/hosting/index.html
+++ b/hosting/index.html
@@ -44,7 +44,7 @@
 	<img class="logo" src="logo.png" width="150" alt="WeDeploy">
 
 	<script>
-		var auth = WeDeploy.auth('auth.authdemo.wedeploy.me');
+		var auth = WeDeploy.auth('auth.boilerplate-auth.wedeploy.io');
 
 		function signInWithEmailAndPassword() {
 			auth.signInWithEmailAndPassword(signIn.email.value, signIn.password.value)
