--- a/hosting/signup.html
+++ b/hosting/signup.html
@@ -22,7 +22,7 @@
 
 	<script>
 		function submitForm() {
-			WeDeploy.auth('auth.authdemo.wedeploy.me')
+			WeDeploy.auth('auth.boilerplate-auth.wedeploy.io')
 				.createUser({
 					email: signUp.email.value,
 					name: signUp.name.value,
