--- a/hosting/index.html
+++ b/hosting/index.html
@@ -71,7 +71,7 @@
 		}
 
 		auth.onSignIn(function(user) {
-			console.log('Signed-in', user);
+			alert('Signed-in' + user.email);
 		});
 	</script>
 </body>
